# air-canvas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: __init__.py  canvas.py  effects.py  gesture.py  hand_tracker.py  model_downloader.py
tests/: test_canvas.py  test_gesture.py  test_hand_tracker.py
